...

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mlogin_username_hint"
                android:lines="1"
                android:paddingHorizontal="10dp" />
        </android.support.design.widget.TextInputLayout>
...
            android:text="or"
            android:textColor="#999999"
            android:textSize="22dp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mlogin_register" />
    </LinearLayout>
</FrameLayout>
